# msg_translation

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
include/msg_translation/: MsgTranslationWrapper.h  MsgTranslationWrapper.h~  NodeConfiguration.h  NodeConfiguration.h~  NodeOODLWrapper.h~
src/: MsgTranslationWrapper.cpp  MsgTranslationWrapper.cpp~  NodeConfiguration.cpp  NodeConfiguration.cpp~  NodeOODLWrapper.cpp~  msg_translation.cpp  msg_translation.cpp~  node.cpp~  node_oodl.cpp~
